@@ -221,7 +221,7 @@ void PhysicalKeyboardHandler::defineControllerMappings(
     const Controller::Type type, Controller::Jack port, const Properties& properties)
 {
   // Determine controller events to use
-  if(type == Controller::Type::QuadTari) 
+  if(type == Controller::Type::QuadTari)
   {
     if(port == Controller::Jack::Left)
     {
@@ -233,7 +233,7 @@ void PhysicalKeyboardHandler::defineControllerMappings(
       myRightMode = getMode(properties, PropType::Controller_Right1);
       myRight2ndMode = getMode(properties, PropType::Controller_Right2);
     }
-  }   
+  }
   else
   {
     const EventMode mode = getMode(type);
@@ -459,7 +459,7 @@ bool PhysicalKeyboardHandler::isDrivingEvent(const Event::Type event)
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 bool PhysicalKeyboardHandler::isCommonEvent(const Event::Type event)
 {
-  return !(isJoystickEvent(event) || isPaddleEvent(event) 
+  return !(isJoystickEvent(event) || isPaddleEvent(event)
     || isKeyboardEvent(event) || isDrivingEvent(event));
 }
 
